@@ -2,7 +2,7 @@
 Gem::Specification.new do |s|
   s.platform    = Gem::Platform::RUBY
   s.name        = 'spree_mollie'
-  s.version     = '3.2.0'
+  s.version     = '3.5.0'
   s.summary     = 'Spree intergration with Mollie payment service.'
   s.description = s.summary
   s.required_ruby_version = '>= 1.9.3'
@@ -16,7 +16,7 @@ Gem::Specification.new do |s|
   s.require_path = 'lib'
   s.requirements << 'none'
 
-  s.add_dependency 'spree_core', '~> 3.2.0'
+  s.add_dependency 'spree_core', '~> 3.5.0'
   s.add_dependency 'mollie-api-ruby'
 
   s.add_development_dependency 'capybara', '~> 2.1'
