@@ -1,3 +1,5 @@
+- (2018-06-15) Removed finalize! from payment, because it fails
+- (2018-06-15) Migated to spree 3.5
 - (2018-04-23) Fix for crash undefined method `state_callback' 'for'
 - (2018-04-12) Changed mollie payment complete loop, so callbacks are triggered
 - (2018-03-14) Fix with API key issue (updated Mollie client interface)
